# AutoArchLean4

./: .gitignore  README.md  pyproject.toml
benchmarks/: fate-m-codex-deepseek.example.toml  smoke.example.toml
docs/onboarding/: archon-principles.md  codex-deepseek-workspace.md  environment.md  first-run.md  lean-mental-model.md  operator-console.md  troubleshooting.md
docs/roadmap/: continuous-execution.md  open-problem-ladder.md  phase1-5.md  phase6-autonomous-workspace.md
src/archonlab/: __init__.py  adapter.py  app.py  batch.py  benchmark.py  checks.py  config.py  control.py  dashboard.py  events.py  execution_policy.py  executors.py  experiment_ledger.py  fleet.py  lean_analyzer.py  ledger.py  models.py  planner.py  project_state.py  queue.py  services.py  supervisor.py  task_graph.py  theorem_state.py  workflow.py  workspace_daemon.py  workspace_loop.py  worktree.py
tests/: conftest.py  test_adapter.py  test_batch.py  test_batch_concurrency.py  test_benchmark.py  test_benchmark_concurrency.py  test_checks.py  test_cli.py  test_config.py  test_control.py  test_dashboard.py  test_events.py  test_execution_integration.py  test_executors.py  test_experiment_ledger.py  test_fleet.py  test_lean_analyzer.py  test_ledger.py  test_phase4.py  test_phase_policies.py  test_planner.py  test_project_state.py  test_queue.py  test_services.py  test_session_queue.py  test_worker_leases.py  test_workflow.py  test_workspace_daemon.py  test_workspace_loop.py
workflows/: review-on-stuck.example.toml
